--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- phase-1-tasklister-mini-project -->
+
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -11,7 +13,7 @@
 
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <input id="new_task" name="new-task-description" placeholder="description">
       <input type="submit" value="Create New Task">
     </form>
 
